test/fail/basic_syntax/invalid_keyword_use.lily
#[
SyntaxError: var has not been declared.
    from invalid_keyword_use.lily:6:
]#

var v = var
